--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "immutability-helper": "^3.0.1",
+    "moment": "^2.24.0",
+    "rc-time-picker": "^3.7.2",
     "react": "^16.10.1",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
