Adds print functionality and improves functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "http://fchandel.github.io/employee-hours-calculator",
+  "homepage": "https://paycrunch.app",
   "name": "time-tracker",
   "version": "0.1.0",
   "private": true,
